# website

./: .gitignore  .gitmodules  404.md  Makefile.in  README.md  _config.yml  about.md  configure  configure.ac  conflict-of-interest-policy.md  contact.md  convert-to-inline-style.xsl  directors.md  donate.md  faq.md  fonts.css  index.html  index.md  manifesto.md  members.md  news.md  non-profit-corporate-by-laws.md  projects.md  remove-inline-style.xsl  statutes.md
_includes/: footer.html  github-icon.html  head.html  header.html  reedit-icon.html  rss-icon.html  twitter-icon.html  website-icon.html
_posts/: 2015-02-24-declaration.md  2015-03-01-declaration.md  2015-04-01-announce.md  2015-06-05-minutes.md  2015-08-19-minutes.md  2015-09-18-minutes.md  2015-09-18-w3c.md  2015-10-10-mathml-in-html5.md  2015-10-28-minutes.md  2015-11-05-friends.md  2015-11-05-friends.mg  2015-11-07-math-fonts.md  2015-11-30-minutes.md  2016-02-15-annual-activity-report.md  2016-02-15-borrero-law.md  2016-05-31-wikipedia.md  2017-02-15-annual-activity-report.md  2017-04-29-mozilla-addons.md  2017-05-qe-for-screen-readers.md
_sass/: _base.scss  _layout.scss
affiliates/: donate.md  friends.md  index.md  partners.md  sponsors.md
css/: main.scss
legal-documents/: affiliates.md  conflict-of-interest-policy.md  index.md  manifesto.md  non-profit-corporate-by-laws.md
logo/: Makefile.in  README.md  configure  fonts.css  index.md  manifest.txt  remove-inline-style.xsl
meetings/: board-2015-05-20.md  board-2015-08-05.md  board-2015-09-18.md  board-2015-10-28.md  board-2015-11-30.md  (+5 more)
(+8 files in other folders)
