dnl -*- Mode: Autoconf; tab-width: 4; indent-tabs-mode: nil; -*-
dnl vi: set tabstop=4 shiftwidth=4 expandtab syntax=m4:

AC_PREREQ(2.13)
AC_INIT(MathML Logo, 1.0)
AC_CONFIG_SRCDIR(mathml-logo-640x200.svg)

AC_CHECK_PROGS(UNZIP, unzip)
AC_CHECK_PROGS(WGET, wget)
AC_CHECK_PROGS(INKSCAPE, inkscape)
AC_CHECK_PROGS(SFNT2WOFF, sfnt2woff)

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
